--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
 .App {
-  text-align: center;
+  display: flex;
+  border: 1px solid balck;
+  padding: 10px;
+  flex-direction: column;
+  align-items: center;
+  background-color: bisque;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.gif {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: 1px solid black;
+  padding: 10px;
+  width: 300px;
+  margin: 10px;
+  background-color: azure;
 }
